# signaler

./: .gitignore  .npmignore  AGENTS.md  AI-OPTIMIZATION-PLAN.md  BRANDING-UPDATE.md  BUN-COMPILATION-ISSUE.md  CHANGELOG.md  CHECK-BUILD-STATUS.md  CLEAN-INSTALL-GUIDE.md  CLEANUP-RELEASES.md  CLEANUP-SUMMARY.md  COMPLETE-BUN-REMOVAL-GUIDE.md  COMPLETE-CLEANUP-GUIDE.md  COMPLETE-FIX-BUN-PATHS.md  CONTRIBUTING.md  DEVELOPMENT.md  DISTRIBUTION-STRATEGY.md  DISTRIBUTION.md  DONE.md  FINAL-PUBLISH-SUMMARY.md  FINAL-SETUP.sh  FINAL-SOLUTION.md  FIX-BUN-ERROR.md  FIX-SUMMARY.md  GIT-BASH-SETUP.md  IMMEDIATE-WORKAROUND.md  INSTALL-FOOLPROOF.md  INSTALL-GLOBAL.sh  INSTALL-LOCAL.md  INSTALL-STANDALONE.md  INSTALL-WINDOWS.md  INSTALL.md  INSTALLATION-GUIDE.md  INSTALLATION-OPTIONS.md  INSTALLER-FIX-SUMMARY.md  INSTALLER-INVESTIGATION-COMPLETE.md  INSTALLER-ROOT-CAUSE-ANALYSIS.md  INSTALLER-TROUBLESHOOTING.md  JSR-PUBLISH-NOW.md  JSR-QUICKSTART.md  (+76 more)
.apex-auditor/: cache.json  report.html  summary.md
.signaler-verification/: AI-ANALYSIS.json  AI-SUMMARY.json  NAVIGATION.md  QUICK-FIXES.md  ai-fix.json  ai-fix.min.json  ai-ledger.json  export-bundle.json  export.json  issues.json  overview.md  plan.json  pwa.json  red-issues.json  red-issues.md  report.html  run.json  summary-lite.json  summary.json  summary.md  triage.md
app/: package.json  pnpm-lock.yaml  vite.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs
docs/: README.md  (+18 more)
rust/signaler_hotpath/: Cargo.toml
rust/signaler_hotpath/src/: main.rs
(+969 files in other folders)
