[package]
name = "signaler-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tauri = { version = "2.0.0" }
tauri-plugin-shell = "2.0.0"
tauri-plugin-opener = "2.0.0"
