[package]
name = "signaler-app"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.9.1", features = [] }

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tauri = { version = "2.9.1", features = [] }
tauri-plugin-shell = "2.9.1"
tauri-plugin-opener = "2.9.1"
